ComfigMapwithPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-cm
spec:
  containers:
  - name: my-cm-pod
    image: nginx
