combinedatabase.yaml

apiVersion: v1
kind: Service
metadata:
  name: student-app-db-svc
  labels:
    app: student-app-db
spec:
  selector:
    app: student-app-db
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: student-db-sts
  labels:
    app: student-app-db
spec:
  serviceName: student-app-db-svc
  replicas: 2
  selector:
    matchLabels:
      app: student-app-db
  template:
    metadata:
      labels:
        app: student-app-db
    spec:
      containers:
        - image: mariadb:latest
          name: my-name
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: student-db-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: student-db-volume
          emptyDir: {}
