deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-deploy-cont
          image: nginx
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-deploy-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 80
  type: NodePort
