statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-statefulset
spec:
  replicas: 4
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: my-sfs-cont
          image: mysql
          ports:
            - containerPort: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
